# dsync

./: IMPROVEMENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dsync/: __init__.py  cli.py  config.py  log.py  ssh.py  state.py  sync.py  watcher.py
tests/: test_ssh.py
